Changes for Devel-Declare

  - clean up checks for whether we're lexing and whether lex_stuff exists
    to handle the PL_parser factor-out in 5.10

0.002000
  - rewrite guts into perl, add tests for new declaration style

0.001011
  - add support for 'method main' and other package names

0.001010
  - fix traits code, again, so it compiles on 5.10.

0.001009
  - only mangle evals if o->op_ppaddr is actually PL_ppaddr[OP_ENTERVAL]
  - don't set OPf_SPECIAL on entereval ops, mistaken cargo cult from autobox
  - fix traits code to work on older 5.8.x perls

0.001008
  - turns out 0.1.7 in Makefile.PL results in that version going into
    the .xs file as well as the dist name. Then everything breaks.

0.001007
  - bail on SvGROW during declare process since that can't work
  - use a source filter on files and an op wrap on evals to pre-grow
    PL_linestr so we don't get to the point of needing to bail

0.001006
  - nasty goto &$func hack to avoid :lvalue+list context weirdness
  - correct SvGROW invocation

0.001005
  - stop using & prototypes at all

0.001004
  - correct idiotic typo if ifndef

0.001003
  - internalise definitions for toke.c chunks to save hassle
  - make NEWSV macro defined via ifndef rather than version check in case
    of 5.8.8-maint (and 5.8.9)

0.001002
  - compilation fixes for 5.9.5 and -DDEBUGGING

0.001001
  - compilation fixes for 5.8.1+
  - set Makefile.PL to bomb out for <5.8.1

0.001000
  - Initial release to CPAN